Setup api service wrapper
commit ac8aee9bdd8e17d1c4507c878d7b45195c013739
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 12:32:15 2022 +0100

    Create wrapper for the api

commit ceab3e8cc1721ab7a72c1334961f65f2ef0e23fe
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 10:53:50 2022 +0100

    Add pinia user store

commit e0cbb7b3d54a946aae97e5d50219ee337b48b41b
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 10:53:35 2022 +0100

    Regenrate api

commit 386eb3a4a9dd9b590b55afcb4dc86e0baa27291c
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 10:52:57 2022 +0100

    Improve return type of login endpoint

commit 9e46dbd2c7080b6522337b05895237bff5b830cf
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 10:02:51 2022 +0100

    Added support for environment variables

commit 7379a25cb7b1735854fbe1e7325dd9e4b0948980
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 09:26:36 2022 +0100

    Pass access token

commit a943955635e50a22fcdc008f3fa5f6840728baea
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 09:24:55 2022 +0100

    Update typescript client

commit 84554c2e7d95a302f2b229d0bb22be4e665efa1c
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 09:24:18 2022 +0100

    Improve JWT handling in swagger
